--- a/creampuffs.html
+++ b/creampuffs.html
@@ -281,7 +281,7 @@
                 </li>
                 </ul>
                 <ul class="instruction-list list-unstyled">
-                <strong>Assemble the Cream Puffs</strong>
+                <strong>Assembly</strong>
                 <li>
                   <span>14</span>
                   Cut each pastry puff horizontally, pipe in the vanilla custard on the bottom piece and top with the top piece. Dust with powdered sugar before serving. Store leftover assembled cream puffs in the refrigerator covered with plastic wrap.
