--- a/bostoncreamcupcakes.html
+++ b/bostoncreamcupcakes.html
@@ -228,7 +228,16 @@
                 <ul class="instruction-list list-unstyled">
                 <strong>Assembly</strong>
                 <li>
-                  *INSERT LINK TO FUDGE FROSTING RECIPE HERE*
+                  <span>15</span>
+                  Once cupcakes are cooled and pastry cream is chilled, fill a large piping bag fitted with a round tip (or use a ziploc bag with a corner cut off) with pastry cream. Use a knife to cut a 1 1/2" wide and 1" deep cavity into each cupcake (don’t cut all the way to the bottom!). Remove this core from your cupcake and then slice off the bottom so only a 1/4" thick piece of the surface remains (see pictures in post or video for a visual).
+                </li>
+                <li>
+                  <span>16</span>
+                  Fill cupcake with pastry cream and top with reserved 1/4" thick cupcake surface, fitting it snugly against the pastry cream. Drizzle ganache generously over the top of each cupcake, then allow ganache to harden before serving.
+                </li>
+                <li>
+                  <span>17</span>
+                  Store cupcakes in the refrigerator in an airtight container for up to 5 days.
                 </li>
               </ul>
                 <ul class="instruction-list list-unstyled">
