--- a/bostoncreamcupcakes.html
+++ b/bostoncreamcupcakes.html
@@ -191,7 +191,7 @@
                 </li>
                 <li>
                   <span>4</span>
-                  While whisking constantly, slowly drizzle about ⅓ cup of milk mixture into the egg mixture (we’re tempering the mixture this way to keep the eggs from cooking). Gradually add remaining cream until completely combined.
+                  While whisking constantly, slowly drizzle about 1/3 cup of milk mixture into the egg mixture (we’re tempering the mixture this way to keep the eggs from cooking). Gradually add remaining cream until completely combined.
                 </li>
                 <li>
                   <span>5</span>
