--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -189,7 +189,7 @@
                 <strong>Filling</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="marshmallows" name="marshmallows" class="form-check-input">
-                  <label class="form-check-label" for="marshmallows">1/3 cup (67g) packed brown sugar</label>
+                  <label class="form-check-label" for="marshmallows">2/3 cup (134g) packed brown sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="melted" name="melted" class="form-check-input">
@@ -197,30 +197,30 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="Philadelphia" name="Philadelphia" class="form-check-input">
-                  <label class="form-check-label" for="Philadelphia">1 tablespoon ground cinnamon</label>
+                  <label class="form-check-label" for="Philadelphia">2 tablespoons ground cinnamon</label>
                 </div>
               </div>
               <div class="checklist pb-6">
                 <strong>Cream Cheese Frosting</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="marshmallows" name="marshmallows" class="form-check-input">
-                  <label class="form-check-label" for="marshmallows">2 tablespoons butter, softened</label>
+                  <label class="form-check-label" for="marshmallows">4 tablespoons butter, softened</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="melted" name="melted" class="form-check-input">
-                  <label class="form-check-label" for="melted">1 1/2 ounces cream cheese</label>
+                  <label class="form-check-label" for="melted">3 ounces cream cheese</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="Philadelphia" name="Philadelphia" class="form-check-input">
-                  <label class="form-check-label" for="Philadelphia">3/4 cup powdered sugar</label>
+                  <label class="form-check-label" for="Philadelphia">1 1/2 cups powdered sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="thickened" name="thickened" class="form-check-input">
-                  <label class="form-check-label" for="thickened">1 tablespoon half-and-half (sub 1/2 tablespoon whole milk and 1/2 tablespoon heavy cream if necessary)</label>
+                  <label class="form-check-label" for="thickened">2 tablespoon half-and-half (sub 1 tablespoon whole milk and 1 tablespoon heavy cream)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="tbsppowdered" name="tbsppowdered" class="form-check-input">
-                  <label class="form-check-label" for="tbsppowdered">1/4 teaspoon vanilla extract</label>
+                  <label class="form-check-label" for="tbsppowdered">1/2 teaspoon vanilla extract</label>
                 </div>
               </div>
             </div>
