--- a/index.html
+++ b/index.html
@@ -162,20 +162,20 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="category.html" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/menus/muffin.JPG" class="rounded-circle" alt="Menu">
+              <img src="assets/images/menus/savoryicon.png" class="rounded-circle" alt="Menu">
             </a>
             <figcaption class="mt-2">
-              <a href="category.html" class="tstbite-category-title">Cupcakes & Muffins</a>
+              <a href="category.html" class="tstbite-category-title">Savory</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="category.html" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/menus/savoryicon.png" class="rounded-circle" alt="Menu">
+              <img src="assets/images/menus/muffin.JPG" class="rounded-circle" alt="Menu">
             </a>
             <figcaption class="mt-2">
-              <a href="category.html" class="tstbite-category-title">Savory</a>
+              <a href="category.html" class="tstbite-category-title">Other</a>
             </figcaption>
           </figure>
         </div>
