--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               <img src="assets/images/menus/healthicon.JPG" class="rounded-circle" alt="Menu">
             </a>
             <figcaption class="mt-2">
-              <a href="category.html" class="tstbite-category-title">Healthy Desserts</a>
+              <a href="category.html" class="tstbite-category-title">Healthier Desserts</a>
             </figcaption>
           </figure>
         </div>
