--- a/fudgefrosting.html
+++ b/fudgefrosting.html
@@ -154,47 +154,23 @@
                 <strong>Dough</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">2 cups (284g) flour (spoon & leveled)</label>
+                  <label class="form-check-label" for="crackers">10 tablespoons unsalted butter</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 teaspoon baking soda</label>
+                  <label class="form-check-label" for="unsalted">1 1/4 cups unsweetened cocoa powder</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 teaspoon baking powder</label>
+                  <label class="form-check-label" for="unsalted">5 1/4 cups powdered sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">3/4 teaspoon salt</label>
+                  <label class="form-check-label" for="unsalted">2/3 cup milk</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted"> 2 1/2 teaspoons pumpkin pie spice</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">10 tablespoons (140g) unsalted butter, softened</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">3/4 cup (160g) granulated sugar</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 cup (110g) packed light brown sugar</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 large egg</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 teaspoon vanilla extract</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 cup (243g) canned pumpkin</label>
+                  <label class="form-check-label" for="unsalted"> 2 teaspoons vanilla extract</label>
                 </div>
               </div>
             </div>
@@ -205,31 +181,19 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 350°F. Line two 18 by 13-inch baking sheets with silicone baking mats or parchment paper.
+                  In a saucepan, over low heat, melt butter. Stir in cocoa powder. Mixture will resemble a thick paste.
                 </li>
                 <li>
                   <span>2</span>
-                  In a medium mixing bowl whisk together flour, baking soda, baking powder, salt, cinnamon, nutmeg, ginger and cloves for 20 seconds. Set aside.
+                  Transfer chocolate mixture to a large mixing bowl. With mixer on low speed, add in powdered sugar and milk, alternating the two. Reserve a few tablespoons of milk. If frosting is thick, add in remaining milk. Add vanilla extract.
                 </li>
                 <li>
                   <span>3</span>
-                  In the bowl of an electric stand mixer fitted with the paddle attachment cream together butter, granulated sugar and brown sugar until well combined.
+                  Turn mixer to medium high speed and beat about 5 minutes, until frosting is smooth and creamy.
                 </li>
                 <li>
                   <span>4</span>
-                  Mix in egg, then blend in pumpkin and vanilla. Add in flour mixture and mix just until combined.
-                </li>
-                <li>
-                  <span>5</span>
-                  Scoop dough out using a cookie scoop (filling it just slightly heaping). Drop onto prepared baking sheet spacing cookies 2-inches apart.
-                </li>
-                <li>
-                  <span>6</span>
-                  Bake one sheet at a time until cookies are set, about 13 - 15 minutes. Cool on baking sheet several minutes then transfer to a wire rack to cool completely.
-                </li>
-                <li>
-                  <span>7</span>
-                  Once cool, frost cookies with cream cheese frosting (optional). Store in an airtight container in a single layer in refrigerator. Bring to room temperature before serving.
+                  Frost cake or cupcakes as desired.
                 </li>
               </ul>
             </div>
