--- a/fudgefrosting.html
+++ b/fudgefrosting.html
@@ -129,20 +129,12 @@
           <div class="col-md-12">
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
-                <small>Prep Time</small>
-                <span>30 minutes</span>
-              </li>
-              <li>
-                <small>Cook Time</small>
-                <span>30 minutes</span>
-              </li>
-              <li>
                 <small>Total Time</small>
-                <span>1 hour</span>
+                <span>15 minutes</span>
               </li>
               <li>
                 <small>Serving</small>
-                <span>15 cookies
+                <span>Enough to frost a 2-layer cake
                 </span>
               </li>
             </ul>
