--- a/creamcheesefrosting.html
+++ b/creamcheesefrosting.html
@@ -105,7 +105,7 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Fudge Frosting</h5>
+          <h5 class="py-3 mb-0 h2">Cream Cheese Frosting</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
@@ -122,7 +122,7 @@
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/menus/fudgefrosting.jpg" class="w-100" alt="Menu">
+          <img src="assets/images/menus/creamcheesefrosting.jpg" class="w-100" alt="Menu">
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -134,7 +134,7 @@
               </li>
               <li>
                 <small>Serving</small>
-                <span>Enough to frost a 2-layer cake
+                <span>Enough to frost 10 cinnamon rolls
                 </span>
               </li>
             </ul>
@@ -144,24 +144,24 @@
               <h6>Ingredients</h6>
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">10 tablespoons unsalted butter</label>
+                  <input type="checkbox" id="marshmallows" name="marshmallows" class="form-check-input">
+                  <label class="form-check-label" for="marshmallows">4 tablespoons butter, softened</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 1/4 cups unsweetened cocoa powder</label>
+                  <input type="checkbox" id="melted" name="melted" class="form-check-input">
+                  <label class="form-check-label" for="melted">3 ounces cream cheese</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">5 1/4 cups powdered sugar</label>
+                  <input type="checkbox" id="Philadelphia" name="Philadelphia" class="form-check-input">
+                  <label class="form-check-label" for="Philadelphia">1 1/2 cups powdered sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2/3 cup milk</label>
+                  <input type="checkbox" id="thickened" name="thickened" class="form-check-input">
+                  <label class="form-check-label" for="thickened">2 tablespoon half-and-half (sub 1 tablespoon whole milk and 1 tablespoon heavy cream)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted"> 2 teaspoons vanilla extract</label>
+                  <input type="checkbox" id="tbsppowdered" name="tbsppowdered" class="form-check-input">
+                  <label class="form-check-label" for="tbsppowdered">1/2 teaspoon vanilla extract</label>
                 </div>
               </div>
             </div>
@@ -172,19 +172,15 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  In a saucepan, over low heat, melt butter. Stir in cocoa powder. Mixture will resemble a thick paste.
+                  Beat the butter and cream cheese in a medium bowl with an electric mixer until blended.
                 </li>
                 <li>
                   <span>2</span>
-                  Transfer chocolate mixture to a large mixing bowl. With mixer on low speed, add in powdered sugar and milk, alternating the two. Reserve a few tablespoons of milk. If frosting is thick, add in remaining milk. Add vanilla extract.
+                  Add powdered sugar, half-and-half, and vanilla extract, and mix until smooth.
                 </li>
                 <li>
                   <span>3</span>
-                  Turn mixer to medium high speed and beat about 5 minutes, until frosting is smooth and creamy.
-                </li>
-                <li>
-                  <span>4</span>
-                  Frost cake or cupcakes as desired.
+                  Frost cake, cupcakes, or cinnamon rolls as desired.
                 </li>
               </ul>
             </div>
