--- a/other.html
+++ b/other.html
@@ -92,25 +92,25 @@
     </div>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Cookies</h5>
+      <h5 class="py-3 mb-0">Other</h5>
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/pumpkincookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/pumpkincookies.jpg" class="w-100" alt="Pumpkin Cookies">
+            <a href="/fudgefrosting" class="tstbite-animation rounded-6">
+              <img src="assets/images/menus/fudgefrosting.jpg" class="w-100" alt="Pumpkin Cookies">
             </a>
             <figcaption class="mt-2">
-              <a href="/pumpkincookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Cookies</a>
+              <a href="/fudgefrosting" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fudge Frosting</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/chocolatechipcookiecake" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/chocolatechipcookiecake.jpg" class="w-100" alt="Chocolate Chip Cookie Cake">
+            <a href="/creamcheesefrosting" class="tstbite-animation rounded-6">
+              <img src="assets/images/menus/creamcheesefrosting.jpg" class="w-100" alt="Chocolate Chip Cookie Cake">
             </a>
             <figcaption class="mt-2">
-              <a href="/chocolatechipcookiecake" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookie Cake</a>
+              <a href="/creamcheesefrosting" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Cheese Frosting</a>
             </figcaption>
           </figure>
         </div>
