--- a/other.html
+++ b/other.html
@@ -97,7 +97,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/fudgefrosting" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/fudgefrosting.jpg" class="w-100" alt="Pumpkin Cookies">
+              <img src="assets/images/menus/fudgefrosting.jpg" class="w-100" alt="Fudge Frosting">
             </a>
             <figcaption class="mt-2">
               <a href="/fudgefrosting" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fudge Frosting</a>
@@ -107,52 +107,10 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/creamcheesefrosting" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/creamcheesefrosting.jpg" class="w-100" alt="Chocolate Chip Cookie Cake">
+              <img src="assets/images/menus/creamcheesefrosting.jpg" class="w-100" alt="Cream Cheese Frosting">
             </a>
             <figcaption class="mt-2">
               <a href="/creamcheesefrosting" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Cheese Frosting</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/monkeybread" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/monkeybread.jpeg" class="w-100" alt="Monkey Bread">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Monkey Bread Muffins</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/biscuits" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/biscuits.jpg" class="w-100" alt="Boston Cream Cupcakes">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/biscuits" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Biscuits</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/creampuffs" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/creampuffs.jpg" class="w-100" alt="Cinnamon Rolls">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/creampuffs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Puffs</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/chocolatechipcookiecake" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/chocolatechipcookiecake.jpg" class="w-100" alt="Menu">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/chocolatechipcookiecake" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookie Cake</a>
             </figcaption>
           </figure>
         </div>
