--- a/creamcheesefrosting.html
+++ b/creamcheesefrosting.html
@@ -176,7 +176,7 @@
                 </li>
                 <li>
                   <span>2</span>
-                  Add powdered sugar, half-and-half, and vanilla extract, and mix until smooth.
+                  Add powdered sugar, half-and-half, and vanilla extract, and beat until smooth.
                 </li>
                 <li>
                   <span>3</span>
