--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/other" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/menus/muffin.JPG" class="rounded-circle" alt="Menu">
+              <img src="assets/images/menus/fudgefrostingicon.jpg" class="rounded-circle" alt="Menu">
             </a>
             <figcaption class="mt-2">
               <a href="/other" class="tstbite-category-title">Other</a>
