--- a/bostoncreamcupcakes.html
+++ b/bostoncreamcupcakes.html
@@ -165,7 +165,7 @@
                 <strong>Fudge Frosting</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted"><a href="/fudgefrosting">Fudge Frosting Recipe</a></label>
+                  <label class="form-check-label" for="unsalted"><a href="/fudgefrosting" style="color: #FF6330">>Fudge Frosting Recipe</a></label>
               </div>
               </div>
             </div>
