--- a/chocolatechipcookiecake.html
+++ b/chocolatechipcookiecake.html
@@ -91,35 +91,39 @@
                 <strong>Cookie Cake</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">1/2 cup (118ml) milk</label>
+                  <label class="form-check-label" for="crackers">3/4 cup (170g) unsalted butter, softened to room temperature</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 cup (118ml) heavy cream</label>
+                  <label class="form-check-label" for="unsalted">1 cup (200g) packed light or dark brown sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/6 cup (33.5g) + 1 1/2 tablespoons granulated sugar, divided</label>
+                  <label class="form-check-label" for="unsalted">1 large egg + 1 egg yolk, both at room temperature</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/8 teaspoon salt</label>
+                  <label class="form-check-label" for="unsalted">2 teaspoons vanilla extract</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 1/2 large egg yolks, room temperature</label>
+                  <label class="form-check-label" for="unsalted">2 cups (250g) all-purpose flour (spoon & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 1/2 tablespoons cornstarch</label>
+                  <label class="form-check-label" for="unsalted">2 teaspoons cornstarch</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 teaspoon vanilla extract</label>
+                  <label class="form-check-label" for="unsalted">1 teaspoon baking soda</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 tablespoons unsalted butter, softened and cut into 4 pieces</label>
+                  <label class="form-check-label" for="unsalted">1/2 teaspoon salt</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 and 1/2 cup (225g) semi-sweet chocolate chips</label>
                 </div>
               </div>
               <div class="checklist pb-4">
