--- a/chocolatechipcookiecake.html
+++ b/chocolatechipcookiecake.html
@@ -141,76 +141,34 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 350°F and line a 12-count cupcake tin with paper liners. Set aside.
+                  Preheat oven to 350°F. Spray a 9-inch pie dish or cake pan with nonstick spray. Set aside.
                 </li>
               </ul>
               <ul class="instruction-list list-unstyled">
-                <strong>Custard</strong>
+                <strong>Cookie Cake</strong>
                 <li>
                   <span>2</span>
-                  Combine milk, cream, 1/6 cup sugar, and salt in a medium-sized saucepan over medium heat. Stir frequently until sugar is dissolved and mixture begins to simmer. Remove from heat and allow to cool for 10 minutes.
+                  In a large bowl using a hand-held mixer or stand mixer fittedwith paddle attachment, beat the butter for 1 minute on medium speed until completely smooth and creamy. Add the brown sugar and beat on medium speed until creamy, about 1 minute. Mix in egg, egg yolk, and vanilla on medium-high speed until combined. Scrape down the sides and bottom of the bowl as needed.
                 </li>
                 <li>
                   <span>3</span>
-                  In a separate large bowl, vigorously whisk together egg yolks and remaining sugar until sugar begins to dissolve (about 15-30 seconds). Sprinkle cornstarch over mixture and whisk until combined and slightly thickened.
+                  In a separate bowl, combine flour, cornstarch, baking soda and salt. On low speed, slowly mix into the wet ingredients until combined. The cookie dough will be quite thick. Add 1 and 1/4 cups chocolate chips and mix for about 5 seconds until evenly disbursed.
                 </li>
                 <li>
                   <span>4</span>
-                  While whisking constantly, slowly drizzle about 1/3 cup of milk mixture into the egg mixture (we’re tempering the mixture this way to keep the eggs from cooking). Gradually add remaining cream until completely combined.
+                  Press the cookie dough evenly into the prepared pan. Bake for 20-25 minutes or until the cake is lightly golden brown (could be up to 30 minutes, depending on your oven). Use a toothpick to test for doneness. You may want to cover the cake loosely with aluminum foil after 15 minutes to avoid heavy browning around the edges. Remove from the oven and set the pan on a wire rack to cool completely. Once cooled, use a sharp knife or metal spatula to loosen the sides of the cookie cake from the pan and transfer to a serving dish. (Or use can serve directly from the pan.)
                 </li>
                 <li>
                   <span>5</span>
-                  Pour mixture back into saucepan and return to the stovetop over medium heat, whisking frequently until mixture begins to thicken. Remove from heat and pour through a fine mesh strainer into a heatproof bowl. Add vanilla and whisk in butter, one piece at a time, until completely melted and mixture is smooth.
-                </li>
-                <li>
-                  <span>6</span>
-                  Place a piece of plastic wrap directly against the surface of the pastry cream, allow to cool at room temperature for 20 minutes then transfer to refrigerator to chill completely (about 2 hours). Meanwhile, prepare cupcakes.
+                  Decorate the cooled cookie cake with frosting using a Wilton piping bag and tip. Depending how much frosting you use, you may have some leftover. Cookie cake remains fresh covered tightly at room temperature for up to 3 days.
                 </li>
                 </ul>
-                <ul class="instruction-list list-unstyled">
-                <strong>Cupcakes</strong>
-                <li>
-                  <span>10</span>
-                  With an electric or stand mixer, beat together butter, oil, and sugar until light, fluffy, and well-combined (about 30 seconds on medium/high speed).
-                </li>
-                <li>
-                  <span>11</span>
-                  Add eggs, one at a time, stirring well after each addition, and stir in vanilla extract.
-                </li>
-                <li>
-                  <span>12</span>
-                  In a separate bowl whisk together flour, baking powder, and salt.
-                </li>
-                <li>
-                  <span>13</span>
-                  Using a spatula now rather than the electric mixer, gradually alternate adding the flour mixture and buttermilk to the butter/oil batter, starting and ending with the flour mixture and stirring until just-combined after each addition. Ingredients should be thoroughly combined, but take care not to over-mix or your cupcakes will be dense and dry.
-                </li>
-                <li>
-                  <span>14</span>
-                  Fill cupcake liners no more than 3/4 full (if you have extra batter discard it, don’t overfill the liners or your cupcakes will cave in), transfer to center rack of oven (I usually bake one pan at a time to ensure even baking), and bake for 17-19 minutes or until a toothpick inserted in the center comes out clean or with a few moist crumbs. Allow to cool for 10 minutes in cupcake pan then transfer to wire rack to cool completely.
-                </li>
-                </ul>
-                <ul class="instruction-list list-unstyled">
-                <strong>Assembly</strong>
-                <li>
-                  <span>15</span>
-                  Once cupcakes are cooled and pastry cream is chilled, fill a large piping bag fitted with a round tip (or use a ziploc bag with a corner cut off) with pastry cream. Use a knife to cut a 1 1/2" wide and 1" deep cavity into each cupcake (don’t cut all the way to the bottom!). Remove this core from your cupcake and then slice off the bottom so only a 1/4" thick piece of the surface remains (see pictures in post or video for a visual).
-                </li>
-                <li>
-                  <span>16</span>
-                  Fill cupcake with pastry cream and top with reserved 1/4" thick cupcake surface, fitting it snugly against the pastry cream. Drizzle ganache generously over the top of each cupcake, then allow ganache to harden before serving.
-                </li>
-                <li>
-                  <span>17</span>
-                  Store cupcakes in the refrigerator in an airtight container for up to 5 days.
-                </li>
-              </ul>
                 <ul class="instruction-list list-unstyled">
                 <strong>Fudge Frosting</strong>
                 <li>
-                  *INSERT LINK TO FUDGE FROSTING RECIPE HERE*
+                  <span>10</span>
+                  <label class="form-check-label" for="unsalted"><a href="/fudgefrosting" style="color: #FF6330">>Fudge Frosting Recipe</a></label>
                 </li>
-              </ul>
             </div>
           </div>
         </div>
