--- a/chocolatechipcookiecake.html
+++ b/chocolatechipcookiecake.html
@@ -167,7 +167,7 @@
                 <strong>Fudge Frosting</strong>
                 <li>
                   <span>10</span>
-                  <label class="form-check-label" for="unsalted"><a href="/fudgefrosting" style="color: #FF6330">>Fudge Frosting Recipe</a></label>
+                  <label class="form-check-label" for="unsalted"><a href="/fudgefrosting" style="color: #FF6330">Fudge Frosting Recipe</a></label>
                 </li>
             </div>
           </div>
