--- a/other.html
+++ b/other.html
@@ -114,6 +114,16 @@
             </figcaption>
           </figure>
         </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/bostoncreamcupcakes" class="tstbite-animation rounded-6">
+              <img src="assets/images/menus/bostoncreamcupcakes.png" class="w-100" alt="Boston Cream Cupcakes">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/bostoncreamcupcakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Boston Cream Cupcakes</a>
+            </figcaption>
+          </figure>
+        </div>
       </div>
     </section>
   </div>
