--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -15,10 +15,10 @@
     <header class="tstbite-header bg-white">
       <nav class="navbar navbar-expand-lg has-header-inner px-0">
         <a class="navbar-brand" href="https://emuhly.com">
-          <img src="assets/images/emuhly.png" style="max-width: 100px;" alt="Emuhly">
+          <img src="assets/images/emuhly.png" style="max-width: 100px;">
         </a>
         <div class="tstbite-header-links d-flex align-items-center ms-auto order-0 order-lg-2">
-          <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/icon.png" alt="Avatar"></a>
+          <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/icon.png"></a>
         </div>
         <button class="navbar-toggler pe-0 ms-2 ms-md-3" type="button" data-bs-toggle="collapse" data-bs-target="#menu-4" aria-controls="menu-4" aria-expanded="false" aria-label="Toggle navigation">
           <svg data-name="Icon/Hamburger" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -33,12 +33,12 @@
     <div class="container">
       <div class="input-group search-box">
         <input type="text" name="Search" placeholder="Search" class="form-control" id="Search">
-        <button type="button"><img src="assets/images/icons/close.svg" alt="img"></button>
+        <button type="button"><img src="assets/images/icons/close.svg"></button>
       </div>
       <div class="search-results" id="SearchList">
         <div class="tstbite-search-list">
           <a href="#0">
-            <figure><img src="assets/images/menus/menu111.png" class="rounded-circle" alt="Menu"></figure>
+            <figure><img src="assets/images/menus/menu111.png" class="rounded-circle"</figure>
             <div class="tstbite-search-name">
               <strong class="small">Cake</strong>
               <span class="tiny">Category</span>
@@ -47,7 +47,7 @@
         </div>
         <div class="tstbite-search-list">
           <a href="#0">
-            <figure><img src="assets/images/menus/menu112.jpg" class="rounded-2" alt="Menu"></figure>
+            <figure><img src="assets/images/menus/menu112.jpg" class="rounded-2"</figure>
             <div class="tstbite-search-name">
               <strong class="small">Black Forest Birthday Cake</strong>
             </div>
@@ -55,7 +55,7 @@
         </div>
         <div class="tstbite-search-list">
           <a href="#0">
-            <figure><img src="assets/images/menus/menu113.jpg" class="rounded-2" alt="Menu"></figure>
+            <figure><img src="assets/images/menus/menu113.jpg" class="rounded-2"></figure>
             <div class="tstbite-search-name">
               <strong class="small">Double Thick Layered Sponge Cake</strong>
             </div>
@@ -63,7 +63,7 @@
         </div>
         <div class="tstbite-search-list">
           <a href="#0">
-            <figure><img src="assets/images/menus/menu114.jpg" class="rounded-2" alt="Menu"></figure>
+            <figure><img src="assets/images/menus/menu114.jpg" class="rounded-2"></figure>
             <div class="tstbite-search-name">
               <strong class="small">Cranberry Macaroon Ice cream Cake</strong>
             </div>
@@ -71,7 +71,7 @@
         </div>
         <div class="tstbite-search-list">
           <a href="#0">
-            <figure><img src="assets/images/menus/menu115.jpg" class="rounded-2" alt="Menu"></figure>
+            <figure><img src="assets/images/menus/menu115.jpg" class="rounded-2"></figure>
             <div class="tstbite-search-name">
               <strong class="small">Almond Cinnamon Sponge Cake</strong>
             </div>
@@ -79,7 +79,7 @@
         </div>
         <div class="tstbite-search-list">
           <a href="#0">
-            <figure><img src="assets/images/menus/menu116.jpg" class="rounded-2" alt="Menu"></figure>
+            <figure><img src="assets/images/menus/menu116.jpg" class="rounded-2"></figure>
             <div class="tstbite-search-name">
               <strong class="small">Four Mini Birthday Cupcakes</strong>
             </div>
@@ -122,7 +122,7 @@
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/menus/cinnamonroll.JPG" class="w-100" alt="Menu">
+          <img src="assets/images/menus/cinnamonroll.JPG" class="w-100">
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -158,69 +158,69 @@
                 <strong>Dough</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">2 and 3/4 cups (344g) flour (spoon & leveled)</label>
+                  <label class="form-check-label">2 and 3/4 cups (344g) flour (spoon & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/4 cup (50g) granulated sugar</label>
+                  <label class="form-check-label">1/4 cup (50g) granulated sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 teaspoon salt</label>
+                  <label class="form-check-label">1/2 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">3/4 cup (180ml) whole milk</label>
+                  <label class="form-check-label">3/4 cup (180ml) whole milk</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">3 tablespoons (45g) unsalted butter</label>
+                  <label class="form-check-label">3 tablespoons (45g) unsalted butter</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 packet instant yeast</label>
+                  <label class="form-check-label">1 packet instant yeast</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 large egg (room temperature)</label>
+                  <label class="form-check-label">1 large egg (room temperature)</label>
                 </div>
               </div>
               <div class="checklist pb-4">
                 <strong>Filling</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="marshmallows" name="marshmallows" class="form-check-input">
-                  <label class="form-check-label" for="marshmallows">2/3 cup (134g) packed brown sugar</label>
+                  <label class="form-check-label">2/3 cup (134g) packed brown sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="melted" name="melted" class="form-check-input">
-                  <label class="form-check-label" for="melted">3 tablespoons (45g) unsalted butter, extra softened</label>
+                  <label class="form-check-label">3 tablespoons (45g) unsalted butter, extra softened</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="Philadelphia" name="Philadelphia" class="form-check-input">
-                  <label class="form-check-label" for="Philadelphia">2 tablespoons ground cinnamon</label>
+                  <label class="form-check-label">2 tablespoons ground cinnamon</label>
                 </div>
               </div>
               <div class="checklist pb-6">
                 <strong>Cream Cheese Frosting</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="marshmallows" name="marshmallows" class="form-check-input">
-                  <label class="form-check-label" for="marshmallows">4 tablespoons butter, softened</label>
+                  <label class="form-check-label">4 tablespoons butter, softened</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="melted" name="melted" class="form-check-input">
-                  <label class="form-check-label" for="melted">3 ounces cream cheese</label>
+                  <label class="form-check-label">3 ounces cream cheese</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="Philadelphia" name="Philadelphia" class="form-check-input">
-                  <label class="form-check-label" for="Philadelphia">1 1/2 cups powdered sugar</label>
+                  <label class="form-check-label">1 1/2 cups powdered sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="thickened" name="thickened" class="form-check-input">
-                  <label class="form-check-label" for="thickened">2 tablespoon half-and-half (sub 1 tablespoon whole milk and 1 tablespoon heavy cream)</label>
+                  <label class="form-check-label">2 tablespoon half-and-half (sub 1 tablespoon whole milk and 1 tablespoon heavy cream)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="tbsppowdered" name="tbsppowdered" class="form-check-input">
-                  <label class="form-check-label" for="tbsppowdered">1/2 teaspoon vanilla extract</label>
+                  <label class="form-check-label">1/2 teaspoon vanilla extract</label>
                 </div>
               </div>
             </div>
@@ -275,7 +275,7 @@
         <div class="col-md-6">
           <div class="tastebite-footer-contnet pe-0 pe-lg-5 me-0 me-md-5">
             <a href="/">
-              <img src="assets/images/emuhlytransparent.png" style="max-width: 125px;" alt="Emuhly">
+              <img src="assets/images/emuhlytransparent.png" style="max-width: 125px;">
             </a>
           </div>
         </div>
