--- a/index.html
+++ b/index.html
@@ -131,41 +131,41 @@
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="category.html" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/comingsoon" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/menus/breakfasticon.jpeg" class="rounded-circle" alt="Menu">
             </a>
             <figcaption class="mt-2">
-              <a href="category.html" class="tstbite-category-title">Breads</a>
+              <a href="/comingsoon" class="tstbite-category-title">Breads</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="category.html" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/comingsoon" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/menus/healthicon.JPG" class="rounded-circle" alt="Menu">
             </a>
             <figcaption class="mt-2">
-              <a href="category.html" class="tstbite-category-title">Healthier Desserts</a>
+              <a href="/comingsoon" class="tstbite-category-title">Healthier Desserts</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="category.html" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/comingsoon" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/menus/bar.png" class="rounded-circle" alt="Menu">
             </a>
             <figcaption class="mt-2">
-              <a href="category.html" class="tstbite-category-title">Bars</a>
+              <a href="/comingsoon" class="tstbite-category-title">Bars</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="category.html" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/comingsoon" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/menus/savoryicon.png" class="rounded-circle" alt="Menu">
             </a>
             <figcaption class="mt-2">
-              <a href="category.html" class="tstbite-category-title">Savory</a>
+              <a href="/comingsoon" class="tstbite-category-title">Savory</a>
             </figcaption>
           </figure>
         </div>
