--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -157,69 +157,69 @@
               <div class="checklist pb-2">
                 <strong>Dough</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <input type="checkbox" class="form-check-input">
                   <label class="form-check-label">2 and 3/4 cups (344g) flour (spoon & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox" class="form-check-input">
                   <label class="form-check-label">1/4 cup (50g) granulated sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox" class="form-check-input">
                   <label class="form-check-label">1/2 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox" class="form-check-input">
                   <label class="form-check-label">3/4 cup (180ml) whole milk</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox" class="form-check-input">
                   <label class="form-check-label">3 tablespoons (45g) unsalted butter</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox" class="form-check-input">
                   <label class="form-check-label">1 packet instant yeast</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox" class="form-check-input">
                   <label class="form-check-label">1 large egg (room temperature)</label>
                 </div>
               </div>
               <div class="checklist pb-4">
                 <strong>Filling</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="marshmallows" name="marshmallows" class="form-check-input">
+                  <input type="checkbox" class="form-check-input">
                   <label class="form-check-label">2/3 cup (134g) packed brown sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="melted" name="melted" class="form-check-input">
+                  <input type="checkbox" class="form-check-input">
                   <label class="form-check-label">3 tablespoons (45g) unsalted butter, extra softened</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="Philadelphia" name="Philadelphia" class="form-check-input">
+                  <input type="checkbox" class="form-check-input">
                   <label class="form-check-label">2 tablespoons ground cinnamon</label>
                 </div>
               </div>
               <div class="checklist pb-6">
                 <strong>Cream Cheese Frosting</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="marshmallows" name="marshmallows" class="form-check-input">
-                  <label class="form-check-label">4 tablespoons butter, softened</label>
+                  <input type="checkbox" class="form-check-input">
+                  <label class="form-check-label"><a href="/creamcheesefrosting" style="color: #FF6330">Cream Cheese Frosting Recipe</a></label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="melted" name="melted" class="form-check-input">
+                  <input type="checkbox" class="form-check-input">
                   <label class="form-check-label">3 ounces cream cheese</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="Philadelphia" name="Philadelphia" class="form-check-input">
+                  <input type="checkbox" class="form-check-input">
                   <label class="form-check-label">1 1/2 cups powdered sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="thickened" name="thickened" class="form-check-input">
+                  <input type="checkbox" class="form-check-input">
                   <label class="form-check-label">2 tablespoon half-and-half (sub 1 tablespoon whole milk and 1 tablespoon heavy cream)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="tbsppowdered" name="tbsppowdered" class="form-check-input">
+                  <input type="checkbox" class="form-check-input">
                   <label class="form-check-label">1/2 teaspoon vanilla extract</label>
                 </div>
               </div>
