--- a/pumpkincookies.html
+++ b/pumpkincookies.html
@@ -205,7 +205,7 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 350°F. Line two 18 by 13-inch baking sheets with silicone baking mats or parchment paper.
+                  Preheat oven to 350°F and line two baking sheets with parchment paper. Set aside.
                 </li>
                 <li>
                   <span>2</span>
