--- a/bars.html
+++ b/bars.html
@@ -97,20 +97,10 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/pumpkincookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/pumpkincookies.jpg" class="w-100" alt="Pumpkin Cookies">
+              <img src="assets/images/menus/butterbars.png" class="w-100" alt="Butter Bars">
             </a>
             <figcaption class="mt-2">
-              <a href="/pumpkincookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Cookies</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/chocolatechipcookiecake" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/chocolatechipcookiecake.jpg" class="w-100" alt="Chocolate Chip Cookie Cake">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/chocolatechipcookiecake" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookie Cake</a>
+              <a href="/butterbars" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Gooey Butter Bars</a>
             </figcaption>
           </figure>
         </div>
