--- a/index.html
+++ b/index.html
@@ -141,21 +141,21 @@
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/comingsoon" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/menus/healthicon.JPG" class="rounded-circle" alt="Menu">
             </a>
             <figcaption class="mt-2">
-              <a href="/comingsoon" class="tstbite-category-title">Healthier Desserts</a>
+              <a href="/healthierdesserts" class="tstbite-category-title">Healthier Desserts</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/comingsoon" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/bars" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/menus/bar.png" class="rounded-circle" alt="Menu">
             </a>
             <figcaption class="mt-2">
-              <a href="/comingsoon" class="tstbite-category-title">Bars</a>
+              <a href="/bars" class="tstbite-category-title">Bars</a>
             </figcaption>
           </figure>
         </div>
