--- a/bars.html
+++ b/bars.html
@@ -92,11 +92,11 @@
     </div>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Cookies</h5>
+      <h5 class="py-3 mb-0">Bars</h5>
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/pumpkincookies" class="tstbite-animation rounded-6">
+            <a href="/butterbars" class="tstbite-animation rounded-6">
               <img src="assets/images/menus/butterbars.png" class="w-100" alt="Butter Bars">
             </a>
             <figcaption class="mt-2">
